# subpython

./: pyproject.toml
subpython/: __init__.py  __main__.py  client.py  runner.py  server.py
tests/: test_clientserver.py  test_runner.py
